Yamuna | FBE - 22 | Fix line spacing between label and code editor in form conditions modal

--- a/styles/common/_popUp.scss
+++ b/styles/common/_popUp.scss
@@ -147,3 +147,18 @@
 .CodeMirror-lint-tooltip{
   z-index: 1002 !important; /* stylelint-disable-line declaration-no-important */
 }
+
+.line-break-1 {
+  display: block;
+  margin-bottom: 1em;
+}
+
+.line-break-2 {
+  display: block;
+  margin-bottom: 2em;
+}
+
+.line-break-3 {
+  display: block;
+  margin-bottom: 3em;
+}
